created cards dynamic propertys

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,15 +2,15 @@
 <a href="" class="container__big-card">
   <div class="big-card__img">
     <img
-    src="../../../assets/imgs/placeholder.jpg"
+    src="{{cardImg}}"
     alt="placeholder">
   </div>
   <div class="big-card__title">
-    <h2>Sample Title</h2>
+    <h2>{{cardTitle}}</h2>
   </div>
   <div class="big-card__description">
     <p>
-      Quisque sodales urna tortor, vitae posuere velit pulvinar eget. Ut condimentum quam ac enim varius, sed viverra tortor consectetur. Proin sapien metus, volutpat id dictum id, aliquam a sem.
+      {{cardDescription}}
     </p>
   </div>
 </a>
