--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,11 +3,11 @@
   <div class="container__small-card-content">
     <div class="small-card__img">
       <img
-      src="../../../assets/imgs/placeholder.jpg"
+      src="{{cardImg}}"
       alt="placeholder">
     </div>
     <div class="small-card__title">
-      <h2>Sample Title</h2>
+      <h2>{{cardTitle}}</h2>
     </div>
   </div>
   <div class="small-card__separator">
