new content, footer and interface tweaks

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,13 +1,41 @@
 <div class="container__menu-bar">
-  <ul>
-    <li><a
-      href="https://www.linkedin.com/in/gabriel-mascena-b39397204/">Linkedin</a></li>
-    <li><span>•</span></li>
-    <li><a
-      href="https://github.com/GSMascena">Github</a></li>
-    <li><span>•</span></li>
-    <li><a
-      href="mailto:gabriel.s.mascena@gmail.com">Email</a></li>
-    <li><span>•</span></li>
-  </ul>
+  <div class="container__left-bar">
+    <div class="container__logo" >
+      <img src="../../../assets/imgs/Mouse-Face.ico" alt="">
+    </div>
+    <div class="container__navigation">
+      <ul>
+        <li>
+          <a [routerLink]="['']">Home</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="container__right-bar">
+    <ul>
+      <li>
+        <a
+        href="https://www.linkedin.com/in/gabriel-mascena-b39397204/">
+        <img src="https://i.imgur.com/7pzdEzH.png" alt="">
+        Linkedin
+        </a>
+      </li>
+      <li><span>•</span></li>
+      <li>
+        <a
+          href="https://github.com/GSMascena">
+          <img src="https://i.imgur.com/SfD7pXG.png" alt="">
+          Github
+        </a>
+      </li>
+      <li><span>•</span></li>
+      <li>
+        <a
+        href="mailto:gabriel.s.mascena@gmail.com">
+        <img src="https://i.imgur.com/VfPanmH.png" alt="">
+          mail
+        </a>
+      </li>
+    </ul>
+  </div>
 </div>
