--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,5 +1,5 @@
 
-<a href="" class="container__small-card">
+<a [routerLink]="['content', Id]" class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__img">
       <img
