--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,5 +1,5 @@
 
-<a href="" class="container__big-card">
+<a [routerLink]="['content', Id]" class="container__big-card">
   <div class="big-card__img">
     <img
     src="{{cardImg}}"
