--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,13 +1,48 @@
-.container__menu-bar > ul {
+.container__menu-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.container__left-bar {
+  display: flex;
+  margin-left: 10px;
+}
+
+.container__logo {
+  width: 30px;
+  margin-right: 20px;
+}
+
+.container__logo > img {
+  width: 100%;
+}
+
+.container__navigation {
+  align-self: center;
+}
+
+.container__right-bar {
+  align-self: center;
+  display: flex;
+  align-items: flex-start;
+  margin-right: 10px;
+}
+
+.container__right-bar > ul, .container__navigation > ul {
   display: flex;
   flex: row;
   list-style: none;
 }
 
-.container__menu-bar > ul > li {
+.container__right-bar > ul > li, .container__navigation > ul > li {
   margin-right: 20px;
 }
 
-.container__menu-bar > ul > li > a {
+.container__right-bar > ul > li > a, .container__navigation > ul > li > a {
   text-decoration: none;
+}
+
+.container__right-bar > ul > li > a > img {
+  width: 15px;
+  align-self: center;
 }
