--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,3 @@
-header {
-  margin-top: 15px;
-  display: flex;
-  justify-content: center;
-}
-
 .container__articles {
   margin-top: 30px;
 
@@ -11,3 +5,8 @@ header {
   flex-direction: row;
   justify-content: center;
 }
+
+/* .articles__other {
+  display: flex;
+  flex-direction: row;
+} */
