--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   background-color: #121212;
-  color: #fff;
+  color: #5BFFB2;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
